[package]
name = "playground-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["rc", "derive"] }
serde_json = "1.0.140"
url = "2.5.4"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }
