[package]
name = "playground-api"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "Simple API-binding for The Rust Playground"
repository = "https://github.com/kingananas20/playground-api"
readme = "README.md"
keywords = ["playground", "api", "rust-playground", "rust-playground-api", "simple"]
categories = ["api-bindings", "asynchronous"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**/*"
]

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["rc", "derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
