[package]
name = "playground-api"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Simple API-binding for The Rust Playground"
repository = "https://github.com/kingananas20/playground-api"
readme = "README.md"
keywords = ["playground", "api", "rust-playground", "rust-playground-api", "simple"]
categories = ["api-bindings", "asynchronous"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**/*"
]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
thiserror = "2"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros"] }
